cmake_minimum_required(VERSION 3.5)

project(bounce)

set(CMAKE_CXX_STANDARD 11)

find_package(Threads)

set(HEADERS
        include/bounce/bounce.h
        include/bounce/cloth/cloth.h
        include/bounce/cloth/cloth_collision.h
        include/bounce/cloth/cloth_contact_manager.h
        include/bounce/cloth/cloth_force_solver.h
        include/bounce/cloth/cloth_mesh.h
        include/bounce/cloth/cloth_solver.h
        include/bounce/cloth/cloth_triangle.h
        include/bounce/cloth/contacts/cloth_contact_solver.h
        include/bounce/cloth/contacts/cloth_particle_body_contact.h
        include/bounce/cloth/contacts/cloth_particle_triangle_contact.h
        include/bounce/cloth/forces/force.h
        include/bounce/cloth/forces/mouse_force.h
        include/bounce/cloth/forces/shear_force.h
        include/bounce/cloth/forces/spring_force.h
        include/bounce/cloth/forces/strech_force.h
        include/bounce/cloth/garment/garment.h
        include/bounce/cloth/garment/garment_mesh.h
        include/bounce/cloth/garment/sewing_pattern.h
        include/bounce/cloth/garment_cloth_mesh.h
        include/bounce/cloth/grid_cloth_mesh.h
        include/bounce/cloth/particle.h
        include/bounce/collision/broad_phase.h
        include/bounce/collision/collision.h
        include/bounce/collision/gjk/gjk.h
        include/bounce/collision/gjk/gjk_proxy.h
        include/bounce/collision/sat/sat.h
        include/bounce/collision/sat/sat_edge_and_hull.h
        include/bounce/collision/sat/sat_vertex_and_hull.h
        include/bounce/collision/shapes/aabb3.h
        include/bounce/collision/shapes/box_hull.h
        include/bounce/collision/shapes/capsule.h
        include/bounce/collision/shapes/grid_mesh.h
        include/bounce/collision/shapes/hull.h
        include/bounce/collision/shapes/hull.inl
        include/bounce/collision/shapes/mesh.h
        include/bounce/collision/shapes/qhull.h
        include/bounce/collision/shapes/sphere.h
        include/bounce/collision/shapes/triangle_hull.h
        include/bounce/collision/trees/dynamic_tree.h
        include/bounce/collision/trees/static_tree.h
        include/bounce/common/draw.h
        include/bounce/common/geometry.h
        include/bounce/common/math/mat.h
        include/bounce/common/math/mat22.h
        include/bounce/common/math/mat33.h
        include/bounce/common/math/mat44.h
        include/bounce/common/math/math.h
        include/bounce/common/math/quat.h
        include/bounce/common/math/transform.h
        include/bounce/common/math/vec2.h
        include/bounce/common/math/vec3.h
        include/bounce/common/math/vec4.h
        include/bounce/common/memory/block_pool.h
        include/bounce/common/memory/stack_allocator.h
        include/bounce/common/settings.h
        include/bounce/common/template/array.h
        include/bounce/common/template/list.h
        include/bounce/common/template/object_array.h
        include/bounce/common/template/queue.h
        include/bounce/common/template/stack.h
        include/bounce/common/time.h
        include/bounce/dynamics/body.h
        include/bounce/dynamics/contacts/collide/clip.h
        include/bounce/dynamics/contacts/collide/collide.h
        include/bounce/dynamics/contacts/contact.h
        include/bounce/dynamics/contacts/contact_cluster.h
        include/bounce/dynamics/contacts/contact_solver.h
        include/bounce/dynamics/contacts/convex_contact.h
        include/bounce/dynamics/contacts/manifold.h
        include/bounce/dynamics/contacts/mesh_contact.h
        include/bounce/dynamics/contact_manager.h
        include/bounce/dynamics/island.h
        include/bounce/dynamics/joints/cone_joint.h
        include/bounce/dynamics/joints/joint.h
        include/bounce/dynamics/joints/joint_solver.h
        include/bounce/dynamics/joints/mouse_joint.h
        include/bounce/dynamics/joints/revolute_joint.h
        include/bounce/dynamics/joints/sphere_joint.h
        include/bounce/dynamics/joints/spring_joint.h
        include/bounce/dynamics/joints/weld_joint.h
        include/bounce/dynamics/joint_manager.h
        include/bounce/dynamics/shapes/capsule_shape.h
        include/bounce/dynamics/shapes/hull_shape.h
        include/bounce/dynamics/shapes/mesh_shape.h
        include/bounce/dynamics/shapes/shape.h
        include/bounce/dynamics/shapes/sphere_shape.h
        include/bounce/dynamics/time_step.h
        include/bounce/dynamics/world.h
        include/bounce/dynamics/world_listeners.h
        include/bounce/meshgen/cylinder_mesh.h
        include/bounce/meshgen/sphere_mesh.h
        include/bounce/quickhull/qh_hull.h
        include/bounce/quickhull/qh_hull.inl
        include/bounce/rope/rope.h
        include/bounce/rope/spatial.h
        include/bounce/softbody/block_softbody_mesh.h
        include/bounce/softbody/contacts/softbody_contact_solver.h
        include/bounce/softbody/contacts/softbody_node_body_contact.h
        include/bounce/softbody/softbody.h
        include/bounce/softbody/softbody_contact_manager.h
        include/bounce/softbody/softbody_force_solver.h
        include/bounce/softbody/softbody_mesh.h
        include/bounce/softbody/softbody_node.h
        include/bounce/softbody/softbody_solver.h
        include/bounce/sparse/dense_vec3.h
        include/bounce/sparse/diag_mat33.h
        include/bounce/sparse/sparse_mat33.h
        include/bounce/sparse/sparse_mat33_view.h

)

set(SOURCE
        src/bounce/cloth/cloth.cpp
        src/bounce/cloth/cloth_contact_manager.cpp
        src/bounce/cloth/cloth_force_solver.cpp
        src/bounce/cloth/cloth_solver.cpp
        src/bounce/cloth/cloth_triangle.cpp
        src/bounce/cloth/contacts/cloth_contact_solver.cpp
        src/bounce/cloth/contacts/cloth_particle_body_contact.cpp
        src/bounce/cloth/contacts/cloth_particle_triangle_contact.cpp
        src/bounce/cloth/forces/force.cpp
        src/bounce/cloth/forces/mouse_force.cpp
        src/bounce/cloth/forces/shear_force.cpp
        src/bounce/cloth/forces/spring_force.cpp
        src/bounce/cloth/forces/strech_force.cpp
        src/bounce/cloth/garment/garment_mesh.cpp
        src/bounce/cloth/garment_cloth_mesh.cpp
        src/bounce/cloth/particle.cpp
        src/bounce/collision/broad_phase.cpp
        src/bounce/collision/collision.cpp
        src/bounce/collision/gjk/gjk.cpp
        src/bounce/collision/gjk/gjk_feature_pair.cpp
        src/bounce/collision/sat/sat.cpp
        src/bounce/collision/sat/sat_edge_and_hull.cpp
        src/bounce/collision/sat/sat_vertex_and_hull.cpp
        src/bounce/collision/shapes/hull.cpp
        src/bounce/collision/shapes/qhull.cpp
        src/bounce/collision/trees/dynamic_tree.cpp
        src/bounce/collision/trees/static_tree.cpp
        src/bounce/common/math/math.cpp
        src/bounce/common/memory/block_pool.cpp
        src/bounce/common/memory/stack_allocator.cpp
        src/bounce/common/settings.cpp
        src/bounce/dynamics/body.cpp
        src/bounce/dynamics/contacts/collide/clip.cpp
        src/bounce/dynamics/contacts/collide/collide.cpp
        src/bounce/dynamics/contacts/collide/collide_capsules.cpp
        src/bounce/dynamics/contacts/collide/collide_capsule_hull.cpp
        src/bounce/dynamics/contacts/collide/collide_hulls.cpp
        src/bounce/dynamics/contacts/collide/collide_hulls_cache.cpp
        src/bounce/dynamics/contacts/collide/collide_spheres.cpp
        src/bounce/dynamics/contacts/collide/collide_sphere_capsule.cpp
        src/bounce/dynamics/contacts/collide/collide_sphere_hull.cpp
        src/bounce/dynamics/contacts/contact.cpp
        src/bounce/dynamics/contacts/contact_cluster.cpp
        src/bounce/dynamics/contacts/contact_solver.cpp
        src/bounce/dynamics/contacts/convex_contact.cpp
        src/bounce/dynamics/contacts/manifold.cpp
        src/bounce/dynamics/contacts/mesh_contact.cpp
        src/bounce/dynamics/contact_manager.cpp
        src/bounce/dynamics/draw_world.cpp
        src/bounce/dynamics/island.cpp
        src/bounce/dynamics/joints/cone_joint.cpp
        src/bounce/dynamics/joints/joint.cpp
        src/bounce/dynamics/joints/joint_solver.cpp
        src/bounce/dynamics/joints/mouse_joint.cpp
        src/bounce/dynamics/joints/revolute_joint.cpp
        src/bounce/dynamics/joints/sphere_joint.cpp
        src/bounce/dynamics/joints/spring_joint.cpp
        src/bounce/dynamics/joints/weld_joint.cpp
        src/bounce/dynamics/joint_manager.cpp
        src/bounce/dynamics/shapes/capsule_shape.cpp
        src/bounce/dynamics/shapes/hull_shape.cpp
        src/bounce/dynamics/shapes/mesh_shape.cpp
        src/bounce/dynamics/shapes/shape.cpp
        src/bounce/dynamics/shapes/sphere_shape.cpp
        src/bounce/dynamics/world.cpp
        src/bounce/garment/triangle/A.poly
        src/bounce/garment/triangle/makefile
        src/bounce/garment/triangle/README
        src/bounce/garment/triangle/triangle.c
        src/bounce/garment/triangle/triangle.h
        src/bounce/garment/triangle/tricall.c
        src/bounce/meshgen/cylinder_mesh.cpp
        src/bounce/meshgen/sphere_mesh.cpp
        src/bounce/quickhull/qh_hull.cpp
        src/bounce/rope/rope.cpp
        src/bounce/softbody/contacts/softbody_contact_solver.cpp
        src/bounce/softbody/contacts/softbody_node_body_contact.cpp
        src/bounce/softbody/softbody.cpp
        src/bounce/softbody/softbody_contact_manager.cpp
        src/bounce/softbody/softbody_force_solver.cpp
        src/bounce/softbody/softbody_mesh.cpp
        src/bounce/softbody/softbody_node.cpp
        src/bounce/softbody/softbody_solver.cpp

)


add_library(${PROJECT_NAME} ${SOURCE} ${HEADERS})


